Добавлен components/modal-btn

--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -5,6 +5,7 @@
 @import "./components/section";
 @import "./components/modal";
 @import "./components/logo";
+@import "./components/modal-btn";
 
 @import "./layout/header";
 @import "./layout/footer";
