Добавлены media screen

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -383,11 +383,29 @@ a {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    margin-right: auto;
+    margin-left: auto;
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 /* Section */
@@ -699,14 +717,6 @@ max-width: 100%;
 .header {
   border-bottom: 1px solid #ECECEC;
   max-width: 100%;
-}
-
-.header .container {
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .header-utilus {
@@ -1333,14 +1343,6 @@ h1 {
 } */
 .filter-list-item:not(:last-child) {
   margin-right: 8px;
-}
-
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .works-content {
