--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,33 +3,33 @@
     border-bottom: 1px solid #ECECEC;
     max-width: 100%;
    
-    .container {
-        margin-left: auto;
-        margin-right: auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+    // .container {
+    //     margin-left: auto;
+    //     margin-right: auto;
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: space-between;
+    // }
     
 } 
 
 
-.header-utilus {
+&-utilus {
     display: flex;
 }
 
-.auth-nav {
-    display: flex;  
+.auth-nav-link {
+    display: none;  
 }
 
 .navigation {
-    display: flex;
+    display: none;
     align-items: center;
 }
 
 
 .menu-nav-list {
-    display: flex;
+    display: none;
   
 }
 
@@ -47,7 +47,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 1.2;
-     position: relative;
+    position: relative;
 
     transition-property: color;
     transition-duration: 250ms;
@@ -57,7 +57,6 @@
 .menu-nav-list-item-link.current{
  color: $accent-color;
 
- 
 }
 
  .menu-nav-list-item-link.current::after{
@@ -78,27 +77,15 @@ ul {
     margin: 0;
 }
 
-
-
-
-
 .menu-nav-list .menu-nav-list-item-link:hover {
     color: $accent-color;
 }
 
-.auth-nav-link:hover, .auth-nav-link:focus {
-    color: $accent-color;
-    fill: $accent-color;
-}
-.auth-nav-icon:hover, .auth-nav-icon:focus{
-    color: $accent-color;
-    fill: $accent-color;
-} 
- 
+
 .auth-nav-link{
     padding-top: 32px;
     padding-bottom: 32px;
-    fill: $primary-text-color;
+    fill:  $primary-text-color;
     color: $primary-text-color;
     font-weight: 500;
     font-size: 14px;
@@ -111,7 +98,13 @@ ul {
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover, &:focus {
+        color: $accent-color;
+        fill: $accent-color;
+    }
 } 
+
 .auth-nav-icon{
     margin-right: 10px;
     color: $primary-text-color;
@@ -120,4 +113,9 @@ ul {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover,:focus{
+        color: $accent-color;
+        fill: $accent-color;
+    } 
 }
+
