--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -20,14 +20,14 @@
 
 
 
-.container{
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+// .container{
+//     width: 1200px;
+//     padding-left: 15px;
+//     padding-right: 15px;
+//     margin-left: auto;
+//     margin-right: auto;
     
-}
+// }
 
 .works-content{ 
     padding-top: 20px; 
