--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import "./utils/normalize";
 @import "./utils/variables";
 @import "./base/base";
-@import "./components/container";
+@import "./base/container";
 @import "./components/section";
 @import "./components/modal";
 @import "./components/logo";
