--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,27 +1,22 @@
 
     /* Advantages */
     .advantages-list{
+        padding-top: 60px;
+        @media screen and (min-width: 480px) {
         display: flex;
-        padding-top: 94px;
-        padding-bottom: 94px;
+        flex-wrap: wrap;
+        margin: -15px;
     }
-    .advantages-list .item{
-        width: 270px;
+    .advantages-list {
+        width: calc((100% - 4 * 15px) /2);
+        margin: 15px;
     }
-    .advantages-item:not(:last-child){
-    margin-right: 30px;
+        
     }
-
-    .advantages-item-svg{
-        width: 70px;
-        height: 70px;
-        margin-bottom:25px;
-    }
-
-    .advantages-title{
-        margin-bottom: 10px;
-    }
-    .advantages-list .advantages-title{
+    .advantages-item{
+        width: 450px;
+        padding-top: 30px;
+        padding-bottom: 30px;
         color: $primary-title-color;
         font-family: Roboto;
         font-weight: bold;
@@ -30,18 +25,53 @@
         text-transform: uppercase;
 
     }
-    .advantages-picture{
-        text-align: center;
-        padding-top: 25px;
-        margin-bottom: 30px;
-        background: #F5F4FA;
-        border-radius: 4px;
+   
     
+
+
+
+    //  .advantages-list .item{
+    //     width: 270px;
+    //  }
+
+
+    
+     .advantages-item:not(:last-child){
+     margin-right: 30px;
+     }
+
+     .advantages-item-svg{
+         width: 70px;
+        height: 70px;
+         margin-bottom:25px;
+     }
+
+     .advantages-title{
+        margin-bottom: 10px;
+     }
+     .advantages-list .advantages-title{
+        color: $primary-title-color;
+        font-family: Roboto;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.14;
+        text-transform: uppercase;
+
     }
-    .advantages-list .advantages-text {
+
+    .advantages-picture{
+       text-align: center;
+        
+    padding-top: 25px;
+     margin-bottom: 30px;
+    background: #F5F4FA;
+      border-radius: 4px;
+    
+     }
+     .advantages-list .advantages-text {
         color: $primary-text-color;
         font-family: Roboto;
         font-size: 14px;
         line-height: 1.7;
         
-    }
+     }
