--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,25 +1,84 @@
   /* HEADER */
+.menu-wrapper{
+    display: none;
+}
+
 .header{
+    background-color: salmon;
+    position: relative;
     border-bottom: 1px solid #ECECEC;
     max-width: 100%;
+    
    
     // .container {
     //     margin-left: auto;
     //     margin-right: auto;
     //     display: flex;
     //     align-items: center;
-    //     justify-content: space-between;
+    //     
     // }
     
 } 
-&-container{
+.header-container{
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
-
 &-utilus {
     display: flex;
 }
+
+.menu-btn.menu-btn.is-open {
+    background-color: transparent;
+    display: inline-flex;
+    padding: 0;
+    border: none;
+   
+    
+
+     @media screen and (min-width: 767px) {
+         
+      display: none;
+    }
+    &:hover,
+    &:focus {
+        color: $accent-color;
+    }
+
+}
+.menu-btn .close-icon {
+    display: none;
+}
+.menu-btn.is-open .close-icon {
+    display: block;
+}
+.menu-btn.is-open .menu-icon {
+    display: none;
+}
+.menu-container {
+    background-color: #fff;
+
+    @media screen and (max-width: 767px) {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 453px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+
+
+        &.is-open {
+            display: block; 
+        }
+    }
+    @media screen and (min-width: 767px) {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+} 
+ 
 
 .auth-nav{
     display: none;  
