Добавлены паддинги в лого

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
 }
 
 .header{
-    background-color: salmon;
+  
     position: relative;
     border-bottom: 1px solid #ECECEC;
     max-width: 100%;
@@ -24,7 +24,7 @@
     justify-content: space-between;
     align-items: center;
 }
-&-utilus {
+.header-utilus {
     display: flex;
 }
 
