--- a/CSS/main.css
+++ b/CSS/main.css
@@ -696,7 +696,10 @@ max-width: 100%;
 }
 
 .logo {
-  margin-right: 80px;
+  margin-right: 278px;
+  display: flex;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .logo {
@@ -718,6 +721,170 @@ max-width: 100%;
 /* HEADER */
 .menu-wrapper {
   display: none;
+}
+
+.header {
+  position: relative;
+  border-bottom: 1px solid #ECECEC;
+  max-width: 100%;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-utilus {
+  display: flex;
+}
+
+.menu-btn.menu-btn.is-open {
+  background-color: transparent;
+  display: inline-flex;
+  padding: 0;
+  border: none;
+}
+
+@media screen and (min-width: 767px) {
+  .menu-btn.menu-btn.is-open {
+    display: none;
+  }
+}
+
+.menu-btn.menu-btn.is-open:hover, .menu-btn.menu-btn.is-open:focus {
+  color: #2196F3;
+}
+
+.menu-btn .close-icon {
+  display: none;
+}
+
+.menu-btn.is-open .close-icon {
+  display: block;
+}
+
+.menu-btn.is-open .menu-icon {
+  display: none;
+}
+
+.menu-container {
+  background-color: #fff;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 453px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .menu-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+.auth-nav {
+  display: none;
+}
+
+.navigation {
+  display: none;
+  align-items: center;
+}
+
+.menu-nav-list {
+  display: none;
+}
+
+.menu-nav-list-item {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.menu-nav-list-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.menu-nav-list-item-link {
+  color: #212121;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  position: relative;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-nav-list-item-link.current {
+  color: #2196F3;
+}
+
+.menu-nav-list-item-link.current::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: #2196F3;
+  border-radius: 2px;
+  margin-top: 28px;
+  position: absolute;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+}
+
+.menu-nav-list .menu-nav-list-item-link:hover {
+  color: #2196F3;
+}
+
+.auth-nav-link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  fill: #757575;
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.auth-nav-link:hover, .auth-nav-link:focus {
+  color: #2196F3;
+  fill: #2196F3;
+}
+
+.auth-nav-icon {
+  margin-right: 10px;
+  color: #757575;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.auth-nav-icon:hover, .auth-nav-icon :focus {
+  color: #2196F3;
+  fill: #2196F3;
 }
 
 /* Hero */
