--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,5 +1,8 @@
 .logo {
     margin-right: 278px;
+    display: flex;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 .logo {
     color: #000000 ;
