--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,8 @@
   /* HEADER */
-.menu-wrapper{
-    display: none;
-}
+
+
 
 .header{
-  
     position: relative;
     border-bottom: 1px solid #ECECEC;
     max-width: 100%;
@@ -28,17 +26,21 @@
     display: flex;
 }
 
-.menu-btn.menu-btn.is-open {
-    background-color: transparent;
+
+.menu-btn {
+    position: relative;
     display: inline-flex;
+    margin: 0;
     padding: 0;
     border: none;
-   
-    
+    outline: none;
+    background-color: transparent;
+    padding: 0;
+    border: none;
+  
 
-     @media screen and (min-width: 767px) {
-         
-      display: none;
+    @media screen and (min-width: 768px) {
+        display: none;
     }
     &:hover,
     &:focus {
@@ -46,15 +48,54 @@
     }
 
 }
-.menu-btn .close-icon {
+.menu-btn .icon-close {
     display: none;
 }
-.menu-btn.is-open .close-icon {
-    display: block;
-}
-.menu-btn.is-open .menu-icon {
+
+
+// .menu-btn.menu-btn.is-open {
+//     position: relative;
+//     background-color: transparent;
+//     display: inline-flex;
+  
+   
+    
+
+//      @media screen and (min-width: 767px) {
+         
+//       display: none;
+//     }
+//     &:hover,
+//     &:focus {
+//         color: $accent-color;
+//     }
+
+// }
+ .close-icon {
     display: none;
 }
+
+.menu-wrapper{
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 100%;
+    background: #FFFFFF;
+    width: 480px;
+    height: 453px;
+    padding-top: 60px;
+    padding-bottom: 178px;
+    padding-right: 190px;
+    padding-left: 191px;
+ 
+}
+
+// .menu-btn.is-open .close-icon {
+//     display: block;
+// }
+// .menu-btn.is-open .menu-icon {
+//     display: none;
+// }
 .menu-container {
     background-color: #fff;
 
@@ -80,20 +121,20 @@
 } 
  
 
-.auth-nav{
-    display: none;  
-}
+// .auth-nav{
+//     display: none;  
+// }
 
-.navigation {
-    display: none;
-    align-items: center;
-}
+// .navigation {
+//     display: none;
+//     align-items: center;
+// }
 
 
-.menu-nav-list {
-    display: none;
+// .menu-nav-list {
+//     display: none;
   
-}
+// }
 
 .menu-nav-list-item{
     padding-top: 32px;
@@ -145,7 +186,7 @@ ul {
 
 .auth-nav-link{
     padding-top: 32px;
-    padding-bottom: 32px;
+   
     fill:  $primary-text-color;
     color: $primary-text-color;
     font-weight: 500;
